Fix maven compiler